Textures working with triangles.

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,11 +29,13 @@ dist.jar=${dist.dir}/Voxels.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.slick.jar=C:\\Users\\otso\\Documents\\NetBeansProjects\\slick.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.LWJGL_2.9.1.classpath}:\
-    ${libs.Slick-Util.classpath}
+    ${libs.Slick-Util.classpath}:\
+    ${file.reference.slick.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
