--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,13 +29,17 @@ dist.jar=${dist.dir}/Voxels.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.compress-lzf-1.0.1-javadoc.jar=D:\\imu (chrome)\\compress-lzf-1.0.1-javadoc.jar
+file.reference.compress-lzf-1.0.1.jar=D:\\imu (chrome)\\compress-lzf-1.0.1.jar
 file.reference.slick.jar=C:\\Users\\otso\\Documents\\NetBeansProjects\\slick.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.LWJGL_2.9.1.classpath}:\
     ${libs.Slick-Util.classpath}:\
-    ${file.reference.slick.jar}
+    ${file.reference.slick.jar}:\
+    ${file.reference.compress-lzf-1.0.1-javadoc.jar}:\
+    ${file.reference.compress-lzf-1.0.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
