Added much faster serialization / deserialization. 625 chunks in 10 seconds.

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -31,6 +31,7 @@ endorsed.classpath=
 excludes=
 file.reference.compress-lzf-1.0.1-javadoc.jar=D:\\imu (chrome)\\compress-lzf-1.0.1-javadoc.jar
 file.reference.compress-lzf-1.0.1.jar=D:\\imu (chrome)\\compress-lzf-1.0.1.jar
+file.reference.fst-1.55-onejar.jar=C:\\Users\\otso\\Documents\\NetBeansProjects\\fst-1.55-onejar.jar
 file.reference.slick.jar=C:\\Users\\otso\\Documents\\NetBeansProjects\\slick.jar
 includes=**
 jar.compress=false
@@ -39,7 +40,8 @@ javac.classpath=\
     ${libs.Slick-Util.classpath}:\
     ${file.reference.slick.jar}:\
     ${file.reference.compress-lzf-1.0.1-javadoc.jar}:\
-    ${file.reference.compress-lzf-1.0.1.jar}
+    ${file.reference.compress-lzf-1.0.1.jar}:\
+    ${file.reference.fst-1.55-onejar.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
