Fixed: Chunk id coordinates off by one in negatives. Corrected block side rendering. Modified: Chunk and VBO creation on startup.
Temporarily disabled world generation during play.
Modifying chunk does not update nearby chunks.

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,8 +29,6 @@ dist.jar=${dist.dir}/Voxels.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.compress-lzf-1.0.1-javadoc.jar=D:\\imu (chrome)\\compress-lzf-1.0.1-javadoc.jar
-file.reference.compress-lzf-1.0.1.jar=D:\\imu (chrome)\\compress-lzf-1.0.1.jar
 file.reference.fst-1.55-onejar.jar=C:\\Users\\otso\\Documents\\NetBeansProjects\\fst-1.55-onejar.jar
 file.reference.slick.jar=C:\\Users\\otso\\Documents\\NetBeansProjects\\slick.jar
 includes=**
@@ -39,9 +37,8 @@ javac.classpath=\
     ${libs.LWJGL_2.9.1.classpath}:\
     ${libs.Slick-Util.classpath}:\
     ${file.reference.slick.jar}:\
-    ${file.reference.compress-lzf-1.0.1-javadoc.jar}:\
-    ${file.reference.compress-lzf-1.0.1.jar}:\
-    ${file.reference.fst-1.55-onejar.jar}
+    ${file.reference.fst-1.55-onejar.jar}:\
+    ${libs.Compress LZF.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -76,7 +73,7 @@ run.classpath=\
 # Space-separated list of JVM arguments used when running the project.
 # You may also define separate properties like run-sys-prop.name=value instead of -Dname=value.
 # To set system properties for unit tests define test-sys-prop.name=value:
-run.jvmargs=-Djava.library.path=D:\\LWJGL\\lwjgl-2.9.1/native/windows
+run.jvmargs=-Djava.library.path=C:\\Users\\otso\\Documents\\LWJGL\\lwjgl-2.9.1\\native\\windows
 run.test.classpath=\
     ${javac.test.classpath}:\
     ${build.test.classes.dir}
