Added running sound.

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -38,8 +38,7 @@ javac.classpath=\
     ${libs.Slick-Util.classpath}:\
     ${file.reference.slick.jar}:\
     ${file.reference.fst-1.55-onejar.jar}:\
-    ${libs.Compress LZF.classpath}:\
-    ${libs.TinySound.classpath}
+    ${libs.Compress LZF.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
