Removed block object type, replaced with short array. Chunk creation and packing speed increased by 3x, chunk  unpacking speed increased by 34x.
Old

Putting chunks took: 4597 ms.
Getting chunks took: 8824 ms. (hashmap)

New

Putting chunks took: 1665 ms.
Getting chunks took: 257 ms. (hashmap)

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -39,7 +39,8 @@ javac.classpath=\
     ${file.reference.slick.jar}:\
     ${file.reference.fst-1.55-onejar.jar}:\
     ${libs.Compress LZF.classpath}:\
-    ${libs.TinySound.classpath}
+    ${libs.TinySound.classpath}:\
+    ${libs.LZF.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
