Selecteble active block with mousewheel.

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,21 +29,27 @@ dist.jar=${dist.dir}/Voxels.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.fst-1.55-onejar.jar=C:\\Users\\otso\\Documents\\NetBeansProjects\\fst-1.55-onejar.jar
-file.reference.slick.jar=C:\\Users\\otso\\Documents\\NetBeansProjects\\slick.jar
+file.reference.compress-lzf-1.0.1-javadoc.jar=C:\\xampp\\htdocs\\Voxels\\build\\classes\\compress-lzf-1.0.1-javadoc.jar
+file.reference.compress-lzf-1.0.1.jar=C:\\xampp\\htdocs\\Voxels\\build\\classes\\compress-lzf-1.0.1.jar
+file.reference.fst-1.55-onejar.jar=C:\\xampp\\htdocs\\Voxels\\build\\classes\\fst-1.55-onejar.jar
+file.reference.lwjgl.jar=C:\\xampp\\htdocs\\Voxels\\build\\classes\\lwjgl.jar
+file.reference.lwjgl_util.jar=C:\\xampp\\htdocs\\Voxels\\build\\classes\\lwjgl_util.jar
+file.reference.slick-util.jar=C:\\xampp\\htdocs\\Voxels\\build\\classes\\slick-util.jar
+file.reference.slick.jar=C:\\xampp\\htdocs\\Voxels\\build\\classes\\slick.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${libs.LWJGL_2.9.1.classpath}:\
-    ${libs.Slick-Util.classpath}:\
+    ${file.reference.compress-lzf-1.0.1-javadoc.jar}:\
+    ${file.reference.compress-lzf-1.0.1.jar}:\
+    ${file.reference.lwjgl.jar}:\
+    ${file.reference.lwjgl_util.jar}:\
+    ${file.reference.slick-util.jar}:\
     ${file.reference.slick.jar}:\
-    ${file.reference.fst-1.55-onejar.jar}:\
-    ${libs.Compress LZF.classpath}:\
-    ${libs.TinySound.classpath}:\
-    ${libs.LZF.classpath}
+    ${file.reference.fst-1.55-onejar.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
+javac.external.vm=false
 javac.processorpath=\
     ${javac.classpath}
 javac.source=1.7
@@ -75,7 +81,7 @@ run.classpath=\
 # Space-separated list of JVM arguments used when running the project.
 # You may also define separate properties like run-sys-prop.name=value instead of -Dname=value.
 # To set system properties for unit tests define test-sys-prop.name=value:
-run.jvmargs=-Djava.library.path=C:\\Users\\otso\\Documents\\LWJGL\\lwjgl-2.9.1\\native\\windows
+run.jvmargs=-Djava.library.path=C:\\Users\\otso\\Dropbox\\ASC\\lwjgl-2.9.1\\native\\windows
 run.test.classpath=\
     ${javac.test.classpath}:\
     ${build.test.classes.dir}
