Cleaning, updated license information.

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -34,7 +34,6 @@ file.reference.compress-lzf-1.0.1.jar=C:\\xampp\\htdocs\\Voxels\\build\\classes\
 file.reference.fst-1.55-onejar.jar=C:\\xampp\\htdocs\\Voxels\\build\\classes\\fst-1.55-onejar.jar
 file.reference.lwjgl.jar=C:\\xampp\\htdocs\\Voxels\\build\\classes\\lwjgl.jar
 file.reference.lwjgl_util.jar=C:\\xampp\\htdocs\\Voxels\\build\\classes\\lwjgl_util.jar
-file.reference.slick-util.jar=C:\\xampp\\htdocs\\Voxels\\build\\classes\\slick-util.jar
 file.reference.slick.jar=C:\\xampp\\htdocs\\Voxels\\build\\classes\\slick.jar
 includes=**
 jar.compress=false
@@ -43,7 +42,6 @@ javac.classpath=\
     ${file.reference.compress-lzf-1.0.1.jar}:\
     ${file.reference.lwjgl.jar}:\
     ${file.reference.lwjgl_util.jar}:\
-    ${file.reference.slick-util.jar}:\
     ${file.reference.slick.jar}:\
     ${file.reference.fst-1.55-onejar.jar}
 # Space-separated list of extra javac options
@@ -75,6 +73,7 @@ manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
 platform.active=default_platform
+project.license=gpl30
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
