Added required library files. Added Windows and Linux native files. Added key mappings to in-game menu.

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,12 +29,12 @@ dist.jar=${dist.dir}/Voxels.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.compress-lzf-1.0.1-javadoc.jar=C:\\xampp\\htdocs\\Voxels\\build\\classes\\compress-lzf-1.0.1-javadoc.jar
-file.reference.compress-lzf-1.0.1.jar=C:\\xampp\\htdocs\\Voxels\\build\\classes\\compress-lzf-1.0.1.jar
-file.reference.fst-1.55-onejar.jar=C:\\xampp\\htdocs\\Voxels\\build\\classes\\fst-1.55-onejar.jar
-file.reference.lwjgl.jar=C:\\xampp\\htdocs\\Voxels\\build\\classes\\lwjgl.jar
-file.reference.lwjgl_util.jar=C:\\xampp\\htdocs\\Voxels\\build\\classes\\lwjgl_util.jar
-file.reference.slick.jar=C:\\xampp\\htdocs\\Voxels\\build\\classes\\slick.jar
+file.reference.compress-lzf-1.0.1-javadoc.jar=libraries/compress-lzf-1.0.1-javadoc.jar
+file.reference.compress-lzf-1.0.1.jar=libraries/compress-lzf-1.0.1.jar
+file.reference.fst-1.55-onejar.jar=libraries/fst-1.55-onejar.jar
+file.reference.lwjgl.jar=libraries/lwjgl.jar
+file.reference.lwjgl_util.jar=libraries/lwjgl_util.jar
+file.reference.slick.jar=libraries/slick.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -80,7 +80,7 @@ run.classpath=\
 # Space-separated list of JVM arguments used when running the project.
 # You may also define separate properties like run-sys-prop.name=value instead of -Dname=value.
 # To set system properties for unit tests define test-sys-prop.name=value:
-run.jvmargs=-Djava.library.path=C:\\Users\\otso\\Dropbox\\ASC\\lwjgl-2.9.1\\native\\windows
+run.jvmargs=-Djava.library.path=C:\\Users\\otso\\Documents\\Voxels\\natives\\windows
 run.test.classpath=\
     ${javac.test.classpath}:\
     ${build.test.classes.dir}
